# Prune

./: .gitattributes  .gitignore  CMakeLists.txt  CMakePresets.json  DECISIONS.md  LICENSE  NOTES.md  Notes.md  README.md  simple_shooter_slice_improvements.patch  vcpkg.json
.github/workflows/: build.yml
docs/: SCENE_TYPE_CHECKLIST.md
src/: main.cpp
src/prune/app/: app.cpp  app.hpp  app_config.hpp
src/prune/audio/: audio_system.cpp  audio_system.hpp
src/prune/core/: app.cpp  app.hpp  app_config.hpp  defaults.hpp  game_object.cpp  game_object.hpp  game_object_manager.cpp  game_object_manager.hpp  input.cpp  input.hpp  player_controller.cpp  player_controller.hpp  sandbox_scene.cpp  sandbox_scene.hpp  scene.hpp  time.cpp  time.hpp  window.cpp  window.hpp
src/prune/editor/: editor_actions.cpp  editor_actions.hpp  editor_command.cpp  editor_command.hpp  editor_tool.hpp
src/prune/editor/tools/: transform_gizmo.hpp
src/prune/resources/: sprites.cpp  sprites.hpp
src/prune/scene/: collision.cpp  collision.hpp  editor_scene.cpp  editor_scene.hpp  game_object.cpp  game_object.hpp  game_object_manager.cpp  game_object_manager.hpp  object_concept.hpp  platformer_behaviour.cpp  platformer_behaviour.hpp  platformer_concepts.cpp  platformer_concepts.hpp  platformer_factory.cpp  platformer_factory.hpp  platformer_ids.hpp  platformer_scene.cpp  platformer_scene.hpp  platformer_serializer.cpp  platformer_serializer.hpp  platformer_state.hpp  player_controller.cpp  player_controller.hpp  sandbox_scene.cpp  sandbox_scene.hpp  sandbox_scene_editing.cpp  sandbox_scene_editor.cpp  sandbox_scene_editor_state.hpp  sandbox_scene_serialization.cpp  sandbox_scene_ui.cpp  scene.hpp  scene_camera.cpp  scene_camera.hpp  scene_event.hpp  scene_factory.cpp  scene_factory.hpp  scene_interaction.cpp  scene_interaction.hpp  scene_renderer.cpp  scene_renderer.hpp  (+19 more)
src/prune/scene/artillery/: artillery_behaviour.cpp  artillery_behaviour.hpp  artillery_concepts.cpp  artillery_concepts.hpp  artillery_factory.cpp  artillery_factory.hpp  artillery_ids.hpp  artillery_scene.cpp  artillery_scene.hpp  artillery_serializer.cpp  artillery_serializer.hpp  artillery_state.hpp
src/prune/scene/platformer/: platformer_behaviour.cpp  platformer_behaviour.hpp  platformer_concepts.cpp  platformer_concepts.hpp  platformer_factory.cpp  platformer_factory.hpp  platformer_ids.hpp  platformer_scene.cpp  platformer_scene.hpp  platformer_serializer.cpp  platformer_serializer.hpp
src/prune/scene/simple_shooter/: simple_shooter_behaviour.cpp  simple_shooter_behaviour.hpp  simple_shooter_concepts.cpp  simple_shooter_factory.cpp  simple_shooter_factory.hpp  simple_shooter_player_controller.cpp  simple_shooter_player_controller.hpp  simple_shooter_scene.cpp  simple_shooter_scene.hpp  simple_shooter_serializer.cpp  simple_shooter_serializer.hpp  simple_shooter_state.hpp
src/prune/scene/tools/: transform_gizmo.hpp
src/prune/tooling/: command_history.cpp  command_history.hpp  controls.cpp  controls.hpp  editor_layout.cpp  editor_layout.hpp  editor_ui.cpp  editor_ui.hpp  imgui_layer.cpp  imgui_layer.hpp  inspector.cpp  inspector.hpp  options.cpp  options.hpp  outliner.cpp  outliner.hpp  platformer.cpp  platformer.hpp  simple_shooter.cpp  simple_shooter.hpp  sprite_picker.cpp  sprite_picker.hpp  stats.cpp  stats.hpp  theme.cpp  theme.hpp  ui.cpp  ui.hpp
src/prune/tooling/artillery/: artillery.cpp  artillery.hpp
src/prune/tooling/editor/: tracked_property_table.cpp  tracked_property_table.hpp
src/prune/tooling/imgui/: layout.cpp  layout.hpp  property_table.cpp  property_table.hpp
src/prune/tooling/platformer/: platformer.cpp  platformer.hpp
src/prune/tooling/simple_shooter/: simple_shooter.cpp  simple_shooter.hpp
